--- a/config.env.example
+++ b/config.env.example
@@ -1,16 +1,14 @@
-DOMAIN=<your sites full domain name>
-CERTBOT_EMAILS=<Your email address>
-CERTBOT_TEST_CERT=<1 for testing 0 for prod>
-#example for test:
-#CERTBOT_TEST_CERT=1
+DOMAIN=<full domain name, e.g.: example.com>
+
+#For testing use CERTBOT_TEST_CERT=1
+CERTBOT_TEST_CERT=0
+CERTBOT_EMAILS=<certificate email address>
 CERTBOT_RSA_KEY_SIZE=4096
 COMPOSE_PROJECT_NAME=<docker compose project name>
-# Wordpress settings
-MYSQL_ROOT_PASSWORD=<PASSWORD>
+
+# Mysql/Mariadb and Wordpress settings
+MYSQL_ROOT_PASSWORD=<password>
 MYSQL_DATABASE=wordpress
 MYSQL_USER=mysqladmin
-MYSQL_PASSWORD=<PASSWORD>
-WORDPRESS_DB_HOST=db
-WORDPRESS_DB_USER=mysqladmin
-WORDPRESS_DB_PASSWORD=<PASSWORD>
+MYSQL_PASSWORD=<password>
 WORDPRESS_DB_NAME=wordpress
