--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     image: mariadb:10.4
     volumes:
       - db_data:/var/lib/mysql
-    command: '--default-authentication-plugin=mysql_native_password'
+        #    command: '--default-authentication-plugin=mysql_native_password' // For mysql only
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}" 
