Improve README, support multiple domains, add wp-cli

--- a/config.env.example
+++ b/config.env.example
@@ -1,4 +1,5 @@
-DOMAIN=<full domain name, e.g.: example.com>
+DOMAINS=<full qualified domain name, e.g.: example.com>
+#Multiple domains supported, e.g.: DOMAINS="example.com example2.com"
 
 #For testing use CERTBOT_TEST_CERT=1
 CERTBOT_TEST_CERT=0
