--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: "1"
 services:
   nginx:
     depends_on:
@@ -10,15 +10,17 @@ services:
       - "443:443"
     environment:
       COMPOSE_PROJECT_NAME: "${COMPOSE_PROJECT_NAME}"
-      DOMAIN: "${DOMAIN}"
+      DOMAINS: "${DOMAINS}"
     env_file: "./config.env"
     volumes:
+      - nginx_conf:/etc/nginx/sites/ssl
       - wordpress_data:/var/www/html
-      - nginx_ssl:/etc/nginx/ssl
-      - "wpsite_certbot:/var/www/certbot/${DOMAIN}"
+      - letsencrypt_certs:/etc/letsencrypt
+      - certbot_acme_challenge:/var/www/certbot
     restart: unless-stopped 
     networks: 
       - app-network
+
   certbot:
     depends_on:
       - nginx
@@ -26,14 +28,15 @@ services:
     container_name: certbot
     env_file: "./config.env"
     volumes:
-      - "wpsite_certbot:/var/www/certbot/${DOMAIN}"
-      - wordpress_data:/var/www/html
+      #  - wordpress_data:/var/www/html
+      - letsencrypt_certs:/etc/letsencrypt
+      - certbot_acme_challenge:/var/www/certbot
     networks:
       - app-network
 
   cron:
     build: ./cron
-    #image: cron
+    container_name: cron
     environment:
       COMPOSE_PROJECT_NAME: "${COMPOSE_PROJECT_NAME}"
     volumes:
@@ -42,6 +45,7 @@ services:
     depends_on:
       - nginx
       - certbot
+    restart: unless-stopped
 
   db:
     env_file: 
@@ -78,13 +82,31 @@ services:
     networks:
       - app-network
 
+  wp-cli:
+    container_name: wp-cli
+    depends_on:
+      - wordpress
+    env_file:
+      - config.env
+    environment:
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_USER: "${MYSQL_USER}"
+      WORDPRESS_DB_PASSWORD: "${MYSQL_PASSWORD}"
+      WORDPRESS_DB_NAME: "${WORDPRESS_DB_NAME}"
+    image: wordpress:cli
+    volumes:
+      - wordpress_data:/var/www/html
+    networks:
+      - app-network
+
 volumes:
   db_data:
   wordpress_data:
-  nginx_ssl:
+  nginx_conf:
     external: true
-  wpsite_certbot:
-    #    external: true
+  letsencrypt_certs:
+    external: true
+  certbot_acme_challenge:
 
 networks:
   app-network:
