Add proper support for multiple sites alongside wordpress

--- a/config.env.example
+++ b/config.env.example
@@ -1,5 +1,7 @@
 DOMAINS=<full qualified domain name, e.g.: example.com>
-#Multiple domains supported, e.g.: DOMAINS="example.com example2.com"
+#Multiple domains supported, e.g.: DOMAINS="example.com static.example.com"
+#Note however, that the first domain *MUST* be the wordpress instance. Subsequent ones must be defined in 'vhosts', and its files placed under "/static_sites".
+#Make sure your domains points to and can reach this server.
 
 #For testing use CERTBOT_TEST_CERT=1
 CERTBOT_TEST_CERT=0
