Raised port numbers in compose; renamed network

--- a/config.env.example
+++ b/config.env.example
@@ -3,8 +3,8 @@ DOMAINS=<full qualified domain name, e.g.: example.com>
 #Note however, that the first domain *MUST* be the wordpress instance. Subsequent ones must be defined in 'vhosts', and its files placed under "/static_sites".
 #Make sure your domains points to and can reach this server.
 
-#For testing use CERTBOT_TEST_CERT=1
-CERTBOT_TEST_CERT=0
+#For testing use CERTBOT_TEST_CERT=1; Once staging step is done, set to zero.
+CERTBOT_TEST_CERT=1
 CERTBOT_EMAILS=<certificate email address>
 CERTBOT_RSA_KEY_SIZE=4096
 COMPOSE_PROJECT_NAME=<docker compose project name>
