Replaced nginx with Caddy server, simplifying docker compose drastically

--- a/config.env.example
+++ b/config.env.example
@@ -1,17 +1,7 @@
-DOMAINS=<full qualified domain name, e.g.: example.com>
-#Multiple domains supported, e.g.: DOMAINS="example.com static.example.com"
-#Note however, that the first domain *MUST* be the wordpress instance. Subsequent ones must be defined in 'vhosts', and its files placed under "/static_sites".
-#Make sure your domains points to and can reach this server.
-
-#For testing use CERTBOT_TEST_CERT=1; Once staging step is done, set to zero.
-CERTBOT_TEST_CERT=1
-CERTBOT_EMAILS=<certificate email address>
-CERTBOT_RSA_KEY_SIZE=4096
-COMPOSE_PROJECT_NAME=<docker compose project name>
+COMPOSE_PROJECT_NAME=docker compose project name>
 
 # Mysql/Mariadb and Wordpress settings
 MYSQL_ROOT_PASSWORD=<password>
-MYSQL_DATABASE=wordpress
 MYSQL_USER=mysqladmin
 MYSQL_PASSWORD=<password>
 WORDPRESS_DB_NAME=wordpress
