--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     container_name: wordpress
     volumes:
       - wordpress_data:/var/www/html
-      - "./conf/php.ini:$PHP_INI_DIR/conf.d/custom.ini"
+      - "./conf/php.ini:/usr/local/etc/php/conf.d/custom.ini"
     restart: unless-stopped
     environment:
       WORDPRESS_DB_HOST: db
